# CITS4404

./: .gitignore  README.md  benchmark.bat  benchmark.sh  plan.md  prompts.txt
.windsurf/rules/: principles.md  requirements.md
C++/: Evolve.cpp  Final Report.md  Makefile  NeuralNet.cpp  Player.cpp  Pong.cpp  PongTest.cpp  README.md  build.sh
C++/apps/: demo_game.cpp  replay_player.cpp  test_display.cpp  train_evolution.cpp
C++/src/ai/: evolution.cpp  evolution.hpp  neural_net.cpp  neural_net.hpp
C++/src/ai/players/: neural_player.cpp  neural_player.hpp  simple_player.cpp  simple_player.hpp
C++/src/core/: geometry.cpp  geometry.hpp  pong.cpp  pong.hpp
docs/: CNAME  index.html
pong_ai/: Cargo.toml  serve.sh
pong_ai/assets/: index.html
pong_ai/benches/: population.rs
pong_ai/src/: game.rs  lib.rs  main.rs  nn.rs
pong_ai/src/constants/: mod.rs
pong_ai/src/drawing/: mod.rs
pong_ai/src/game/: controllers.rs  state.rs
pong_ai/src/nn/: mod.rs
rust/: Cargo.toml  README_PYTORCH.md  best_net.json  check_torch_install.cmd  color_example.rs  ratatui.md  run_torch.cmd  setup_torch_env.txt  todo.md
rust/pong_ai/: .gitignore  Cargo.toml  README.md  flake.nix  serve.sh
rust/pong_ai/.github/workflows/: deploy.yml
rust/pong_ai/assets/: index.html
rust/pong_ai/src/: lib.rs  main.rs
rust/pong_ai/src/constants/: mod.rs
rust/pong_ai/src/drawing/: mod.rs
rust/pong_ai/src/game/: controllers.rs  mod.rs  state.rs
rust/pong_ai/src/nn/: mod.rs
rust/pong_ai/src/random/: mod.rs
rust/src/: config.rs  constants.rs  cpp_compat.rs  engines.rs  evolution.rs  game.rs  gamestate.rs  individual.rs  main.rs  menu.rs  net.rs  paddle.rs  population.rs  traits.rs  tui.rs  utils.rs
rust/src/engines/: constants.rs  gpu.rs  heap.rs  mod.rs  simd.rs  stack.rs  torch.rs  utils.rs
rust/src/gamestate/: constants.rs  keyboard_controller.rs
rust/src/shaders/: batch_tournament.wgsl  forward.wgsl
rust/src/tui/: app.rs  components.rs  mod.rs  model_loader.rs  simulation.rs  training.rs  ui.rs
rust/src/tui/components/: config_ui.rs  error_popup.rs  main_menu.rs  message_popup.rs  mod.rs  simulation_setup_ui.rs  simulation_ui.rs  training_ui.rs
