[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
wide = "0.7.5"
rayon = "1.8.0"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
