[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.9.1"
rand_distr = "0.5.1"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.29.0"
wide = "0.7.5"
rayon = "1.8.0"
wgpu = "25.0.2"
pollster = "0.4.0"
bytemuck = { version = "1.14", features = ["derive"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
unicode-width = "0.2.0"
fakeit = "1.3.0"
strum = { version = "0.27.1", features = ["derive"] }
palette = "0.7.6"
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10.1"

# Custom profiles for auto-vectorization control
# Usage: cargo run --profile no-simd
[profile.no-simd]
inherits = "release"

# Usage: cargo run --profile max-simd  
[profile.max-simd]
inherits = "release"

# Windows batch files for RUSTFLAGS control:
# no-simd.bat:  set RUSTFLAGS=-C target-feature=-sse,-sse2,-avx,-avx2 && cargo run --release
# max-simd.bat: set RUSTFLAGS=-C target-feature=+sse,+sse2,+avx,+avx2 -C target-cpu=native && cargo run --release
